[gd_scene load_steps=4 format=3 uid="uid://pac3fllfnqpp"]

[ext_resource type="Script" path="res://levels/GameOver.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dc01qx7uo34s6" path="res://img/background_gray.png" id="2"]
[ext_resource type="Theme" uid="uid://ehwqj083d4h" path="res://theme/general_theme.tres" id="3_cx0vf"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1")

[node name="background_gray" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2")
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_top = 120.0
offset_right = 1080.0
offset_bottom = 354.0
theme = ExtResource("3_cx0vf")

[node name="game_over_msg" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Oh no!"
horizontal_alignment = 1

[node name="try_again" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Try again"

[node name="main_menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Main menu"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Quit"

[connection signal="pressed" from="VBoxContainer/try_again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="VBoxContainer/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
